--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
@@ -1583,80 +1583,16 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_22" >
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_28" >
+           <layout class="QHBoxLayout" name="horizontalLayout_29" >
             <item>
-             <widget class="QLabel" name="cal_lbRebin" >
+             <widget class="QCheckBox" name="cal_ckRES" >
               <property name="text" >
-               <string>Rebinning</string>
+               <string>Create RES File</string>
               </property>
              </widget>
             </item>
             <item>
-             <spacer name="horizontalSpacer_34" >
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0" >
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QLabel" name="cal_lbElow" >
-              <property name="text" >
-               <string>ELow</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="cal_leELow" >
-              <property name="maximumSize" >
-               <size>
-                <width>75</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="cal_lbEWidth" >
-              <property name="text" >
-               <string>EWidth</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="cal_leEWidth" >
-              <property name="maximumSize" >
-               <size>
-                <width>75</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="cal_lbEHigh" >
-              <property name="text" >
-               <string>EHigh</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="cal_leEHigh" >
-              <property name="maximumSize" >
-               <size>
-                <width>75</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_35" >
+             <spacer name="horizontalSpacer_37" >
               <property name="orientation" >
                <enum>Qt::Horizontal</enum>
               </property>
@@ -1671,79 +1607,184 @@
            </layout>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_27" >
+           <layout class="QHBoxLayout" name="horizontalLayout_31" >
             <item>
-             <widget class="QLabel" name="cal_lbBackgroundSubtraction" >
-              <property name="text" >
-               <string>Background Subtraction</string>
+             <layout class="QVBoxLayout" name="verticalLayout_27" >
+              <property name="spacing" >
+               <number>0</number>
               </property>
-             </widget>
+              <item>
+               <widget class="QLabel" name="cal_lbSpecSelect" >
+                <property name="text" >
+                 <string>Spectra Selection</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="cal_lbResBG" >
+                <property name="text" >
+                 <string>Background Subtraction</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_32" >
+                <item>
+                 <widget class="QLabel" name="cal_lbELow" >
+                  <property name="text" >
+                   <string>Rebin: ELow</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="cal_leELow" >
+                  <property name="maximumSize" >
+                   <size>
+                    <width>75</width>
+                    <height>16777215</height>
+                   </size>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+             </layout>
             </item>
             <item>
-             <spacer name="horizontalSpacer_36" >
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
+             <layout class="QVBoxLayout" name="verticalLayout_26" >
+              <property name="spacing" >
+               <number>0</number>
               </property>
-              <property name="sizeHint" stdset="0" >
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
+              <item>
+               <widget class="QLabel" name="cal_lbResSpecMin" >
+                <property name="text" >
+                 <string>Minimum</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="cal_lbStartX" >
+                <property name="text" >
+                 <string>StartX</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="cal_lbEWidth" >
+                <property name="text" >
+                 <string>EWidth</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
-             <widget class="QLabel" name="cal_lbStartX" >
-              <property name="text" >
-               <string>StartX</string>
+             <layout class="QVBoxLayout" name="verticalLayout_25" >
+              <property name="spacing" >
+               <number>0</number>
               </property>
-             </widget>
+              <item>
+               <widget class="QLineEdit" name="cal_leResSpecMin" >
+                <property name="maximumSize" >
+                 <size>
+                  <width>75</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="cal_leStartX" >
+                <property name="sizePolicy" >
+                 <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="maximumSize" >
+                 <size>
+                  <width>75</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="cal_leEWidth" >
+                <property name="maximumSize" >
+                 <size>
+                  <width>75</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
-             <widget class="QLineEdit" name="cal_leStartX" >
-              <property name="sizePolicy" >
-               <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
+             <layout class="QVBoxLayout" name="verticalLayout_24" >
+              <property name="spacing" >
+               <number>0</number>
               </property>
-              <property name="maximumSize" >
-               <size>
-                <width>75</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
+              <item>
+               <widget class="QLabel" name="cal_lbResSpecMax" >
+                <property name="text" >
+                 <string>Maximum</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="cal_lbEndX" >
+                <property name="text" >
+                 <string>EndX</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="cal_lbEHigh" >
+                <property name="text" >
+                 <string>EHigh</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
-             <widget class="QLabel" name="cal_lbEndX" >
-              <property name="text" >
-               <string>EndX</string>
+             <layout class="QVBoxLayout" name="verticalLayout_23" >
+              <property name="spacing" >
+               <number>0</number>
               </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="cal_leEndX" >
-              <property name="maximumSize" >
-               <size>
-                <width>75</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_33" >
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0" >
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
+              <item>
+               <widget class="QLineEdit" name="cal_leResSpecMax" >
+                <property name="maximumSize" >
+                 <size>
+                  <width>75</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="cal_leEndX" >
+                <property name="maximumSize" >
+                 <size>
+                  <width>75</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="cal_leEHigh" >
+                <property name="maximumSize" >
+                 <size>
+                  <width>75</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </item>
